tests/sksl/errors/golden/BitShiftFloatVector.glsl
### Compilation failed:

error: 7: type mismatch: '&=' cannot operate on 'float2', 'int'
error: 8: type mismatch: '|=' cannot operate on 'float2', 'int'
error: 9: type mismatch: '^=' cannot operate on 'float2', 'int'
error: 11: type mismatch: '>>' cannot operate on 'float2', 'int'
error: 12: type mismatch: '<<' cannot operate on 'float2', 'int'
error: 13: type mismatch: '&' cannot operate on 'float2', 'int'
error: 14: type mismatch: '|' cannot operate on 'float2', 'int'
error: 15: type mismatch: '^' cannot operate on 'float2', 'int'
8 errors
